[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Contributors"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

# Required for WASM builds - configure getrandom to use custom randomness
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-version = { workspace = true }
sp-api = { workspace = true }
sp-offchain = { workspace = true }
sp-application-crypto = { workspace = true }
sp-staking = { workspace = true }
sp-block-builder = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-inherents = { workspace = true }
sp-session = { workspace = true }
sp-genesis-builder = { workspace = true }

crypto = { package = "synthetic-crypto", path = "../crypto", default-features = false }
# serde is required unconditionally because polkadot-sdk crates (sp-staking, bounded-collections)
# include it as a non-optional dependency, which activates MaybeSerializeDeserialize bounds
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-timestamp = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-collective = { workspace = true }
pallet-membership = { workspace = true }
pallet-treasury = { workspace = true }
pallet-sudo = { workspace = true }

pallet-identity = { path = "../pallets/identity", default-features = false }
pallet-attestations = { path = "../pallets/attestations", default-features = false }
pallet-asset-registry = { path = "../pallets/asset-registry", default-features = false }
pallet-settlement = { path = "../pallets/settlement", default-features = false, features = ["stark-verify"] }
pallet-oracles = { path = "../pallets/oracles", default-features = false }
pallet-fee-model = { path = "../pallets/fee-model", default-features = false }
pallet-feature-flags = { path = "../pallets/feature-flags", default-features = false }
pallet-observability = { path = "../pallets/observability", default-features = false }
pallet-difficulty = { path = "../pallets/difficulty", default-features = false }
pallet-shielded-pool = { path = "../pallets/shielded-pool", default-features = false, features = ["stark-verify"] }

[dev-dependencies]
sp-runtime = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-coinbase = { path = "../pallets/coinbase", features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "sp-version/std",
    "sp-api/std",
    "sp-offchain/std",
    "sp-application-crypto/std",
    "sp-staking/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-inherents/std",
    "sp-session/std",
    "sp-genesis-builder/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-benchmarking?/std",
    "pallet-timestamp/std",
    "pallet-session/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-collective/std",
    "pallet-membership/std",
    "pallet-treasury/std",
    "pallet-sudo/std",
    "pallet-identity/std",
    "pallet-attestations/std",
    "pallet-asset-registry/std",
    "pallet-settlement/std",
    "pallet-oracles/std",
    "pallet-fee-model/std",
    "pallet-feature-flags/std",
    "pallet-observability/std",
    "pallet-difficulty/std",
    "pallet-shielded-pool/std",
    "crypto/std",
    "serde/std",
    "dep:serde_json",
    "serde_json/std",
    "substrate-wasm-builder",
]
runtime-tests = []
production = [
    "pallet-settlement/production",
    "pallet-shielded-pool/production",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "pallet-collective/runtime-benchmarks",
    "pallet-attestations/runtime-benchmarks",
    "pallet-settlement/runtime-benchmarks",
    "pallet-oracles/runtime-benchmarks",
    "pallet-feature-flags/runtime-benchmarks",
    "pallet-observability/runtime-benchmarks",
    "pallet-fee-model/runtime-benchmarks",
    "pallet-difficulty/runtime-benchmarks",
]

[lints]
workspace = true
