[package]
name = "security-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
block-circuit = { path = "../circuits/block" }
transaction-circuit = { path = "../circuits/transaction" }
epoch-circuit = { path = "../circuits/epoch" }
state-merkle = { path = "../state/merkle" }
crypto = { path = "../crypto", package = "synthetic-crypto" }
network = { path = "../network" }
wallet = { path = "../wallet" }
protocol-versioning = { path = "../protocol/versioning" }
hegemon-node = { path = "../node", features = ["test-utils"] }
consensus = { path = "../consensus" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
rand = "0.8"
hex = "0.4"
url = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bincode = "1.3"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
axum = "0.7"
winter-math = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sp-core = { workspace = true, features = ["std"], optional = true }

[features]
default = []
# Enable substrate-based tests (requires hegemon-node substrate feature)
substrate = ["sp-core", "hegemon-node/substrate"]
# Enable legacy node integration tests (require refactored NodeService API)
legacy-node-tests = []

[[test]]
name = "security_pipeline"
path = "security_pipeline.rs"

[[test]]
name = "node_wallet_daemon"
path = "node_wallet_daemon.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "node_gossip"
path = "node_gossip.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "node_resilience"
path = "node_resilience.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "mining_integration"
path = "mining_integration.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "p2p_pq"
path = "p2p_pq.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "wallet_e2e"
path = "wallet_e2e.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "pq_network_integration"
path = "pq_network_integration.rs"
required-features = ["legacy-node-tests"]

[[test]]
name = "multi_node_substrate"
path = "multi_node_substrate.rs"
required-features = ["substrate"]

[[test]]
name = "shielded_e2e"
path = "shielded_e2e.rs"
# Can run without substrate for mock tests, with substrate for full integration

[[test]]
name = "rpc_integration"
path = "rpc_integration.rs"
# Can run without substrate for mock tests, with substrate for full integration

[[test]]
name = "multinode_integration"
path = "multinode_integration.rs"
# Can run without substrate for mock tests, with substrate for full integration

[[test]]
name = "stark_soundness"
path = "stark_soundness.rs"
# STARK security parameter verification (Phase 15.1.2)

[[test]]
name = "pq_params_audit"
path = "pq_params_audit.rs"
# PQ crypto parameter verification (Phase 15.1.3)

[[test]]
name = "poseidon_compat"
path = "poseidon_compat.rs"
# Verify pallet and circuit Poseidon implementations match

[[test]]
name = "epoch_sync"
path = "epoch_sync.rs"
# Light client epoch sync integration tests (Phase 1g: Recursive Proofs)


[lints]
workspace = true
