[package]
name = "security-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
block-circuit = { path = "../circuits/block" }
transaction-circuit = { path = "../circuits/transaction" }
state-merkle = { path = "../state/merkle" }
crypto = { path = "../crypto", package = "synthetic-crypto" }
network = { path = "../network" }
wallet = { path = "../wallet" }
protocol-versioning = { path = "../protocol/versioning" }
hegemon-node = { path = "../node" }
consensus = { path = "../consensus" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
rand = "0.8"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bincode = "1.3"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }

[features]
default = []
# Enable fast STARK options in transaction-circuit (development only).
stark-fast = []

[[test]]
name = "security_pipeline"
path = "security_pipeline.rs"

[[test]]
name = "shielded_e2e"
path = "shielded_e2e.rs"

[[test]]
name = "rpc_integration"
path = "rpc_integration.rs"

[[test]]
name = "multinode_integration"
path = "multinode_integration.rs"

[[test]]
name = "stark_soundness"
path = "stark_soundness.rs"
# STARK security parameter verification (Phase 15.1.2)

[[test]]
name = "pq_params_audit"
path = "pq_params_audit.rs"
# PQ crypto parameter verification (Phase 15.1.3)

[lints]
workspace = true
