[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bech32 = "0.9"
bincode = "1"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
transaction-circuit = { path = "../circuits/transaction" }
synthetic-crypto = { path = "../crypto" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
