[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", default-features = false, features = ["macros", "json", "query", "http1", "tokio"] }
base64 = "0.22"
bech32 = "0.9"
bincode = "1"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["ws-client", "client"] }
rand = { version = "0.8", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
sha2 = "0.10"
state-merkle = { path = "../state/merkle" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
transaction-circuit = { path = "../circuits/transaction" }
synthetic-crypto = { path = "../crypto" }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
