[package]
name = "wallet"
version = "0.5.1-alpha"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", default-features = false, features = ["macros", "json", "query", "http1", "tokio"] }
base64 = "0.22"
bech32 = "0.9"
bincode = "1"
blake2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
codec = { workspace = true }
futures = "0.3"
bs58 = "0.5"
frame-metadata = "23"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["ws-client", "client"] }
rand = { version = "0.8", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rpassword = "7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
scale-info = { workspace = true }
sha2 = "0.10"
sp-crypto-hashing = "0.1"
state-merkle = { path = "../state/merkle" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
transaction-circuit = { path = "../circuits/transaction", default-features = false, features = ["plonky3"] }
disclosure-circuit = { path = "../circuits/disclosure" }
batch-circuit = { path = "../circuits/batch", default-features = false, features = ["plonky3"], optional = true }
synthetic-crypto = { path = "../crypto" }
twox-hash = "1.6"
url = "2"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[features]
default = []
batch-proofs = ["batch-circuit"]

[lints]
workspace = true
