[package]
name = "walletd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
transaction-circuit = { path = "../circuits/transaction" }
disclosure-circuit = { path = "../circuits/disclosure" }
wallet = { path = "../wallet" }

[lints]
workspace = true
