[package]
name = "aggregation-circuit"
version = "0.1.0"
edition = "2021"

description = "Aggregation proof builder for Hegemon transaction proofs"

[dependencies]
p3-batch-stark = { workspace = true, features = ["parallel"] }
p3-circuit = { workspace = true }
p3-circuit-prover = { workspace = true, features = ["parallel"] }
p3-recursion = { workspace = true }
p3-challenger = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-dft = { workspace = true }
p3-goldilocks = { workspace = true }
p3-lookup = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
rayon = "1"
transaction-circuit = { path = "../transaction", package = "transaction-circuit" }
block-circuit = { path = "../block" }
crypto = { package = "synthetic-crypto", path = "../../crypto" }
sp-core = { workspace = true, features = ["std"] }

[dev-dependencies]
consensus = { path = "../../consensus" }
