[package]
name = "batch-circuit"
version = "0.1.0"
edition = "2021"
authors = ["Pauli Group Inc."]
license = "MIT"
description = "STARK batch transaction circuit for proving multiple transactions in a single proof"
repository = "https://github.com/Pauli-Group/Hegemon"

[dependencies]
transaction-core = { path = "../transaction-core", default-features = false }
transaction-circuit = { path = "../transaction", default-features = false }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
bincode = { version = "1" }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["plonky3"]
std = ["transaction-core/std"]
plonky3 = ["std"]
stark-fast = []
production = []

[lints]
workspace = true
