[package]
name = "circuits-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
transaction-circuit = { path = "../transaction", features = ["rpo-fiat-shamir"] }
block-circuit = { path = "../block" }
protocol-versioning = { path = "../../protocol/versioning" }
state-merkle = { path = "../../state/merkle" }
winterfell = "0.13"

[lints]
workspace = true
