[package]
name = "circuits-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
transaction-circuit = { path = "../transaction" }
transaction-core = { path = "../transaction-core" }
block-circuit = { path = "../block" }
protocol-versioning = { path = "../../protocol/versioning" }
state-merkle = { path = "../../state/merkle" }
p3-goldilocks = { workspace = true }
p3-uni-stark = { workspace = true }
p3-field = { workspace = true }
batch-circuit = { path = "../batch" }
aggregation-circuit = { path = "../aggregation" }
consensus = { path = "../../consensus" }
crypto = { package = "synthetic-crypto", path = "../../crypto" }
tx-proof-manifest = { path = "../tx-proof-manifest" }

[lints]
workspace = true
