[package]
name = "block-recursion"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Recursive block-proof scaffolding for Hegemon"

[dependencies]
anyhow = "1"
bincode = "1.3"
blake3 = "1"
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
rayon = "1"
superneo-backend-lattice = { path = "../superneo-backend-lattice" }
superneo-ccs = { path = "../superneo-ccs" }
superneo-core = { path = "../superneo-core" }
superneo-hegemon = { path = "../superneo-hegemon" }
superneo-ring = { path = "../superneo-ring" }
transaction-core = { path = "../transaction-core" }
transaction-circuit = { path = "../transaction" }
protocol-versioning = { path = "../../protocol/versioning" }

[lints]
workspace = true
