[package]
name = "block-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
blake3 = "1"
sha2 = "0.10"
epoch-circuit = { path = "../epoch", optional = true }
transaction-circuit = { path = "../transaction", default-features = false }
state-merkle = { path = "../../state/merkle" }
protocol-versioning = { path = "../../protocol/versioning" }
winterfell = { version = "0.13", optional = true }
winter-crypto = { version = "0.13", optional = true }
transaction-core = { path = "../transaction-core", optional = true }
p3-air = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }
p3-goldilocks = { workspace = true, optional = true }
p3-matrix = { workspace = true, optional = true }
p3-uni-stark = { workspace = true, optional = true }
bincode = { version = "1", optional = true }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }

[features]
default = []
fast-proofs = ["stark-fast", "winterfell-legacy"]
stark-fast = []
winterfell-legacy = [
    "dep:winterfell",
    "dep:winter-crypto",
    "winterfell/std",
    "winter-crypto/std",
    "transaction-circuit/winterfell-legacy",
    "transaction-circuit/rpo-fiat-shamir",
]
legacy-recursion = ["dep:epoch-circuit", "winterfell-legacy"]
plonky3 = [
    "transaction-circuit/plonky3",
    "transaction-core",
    "transaction-core/plonky3",
    "dep:p3-air",
    "dep:p3-field",
    "dep:p3-goldilocks",
    "dep:p3-matrix",
    "dep:p3-uni-stark",
    "dep:bincode",
]

[lints]
workspace = true
