[package]
name = "block-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
blake3 = "1"
sha2 = "0.10"
transaction-circuit = { path = "../transaction", default-features = false }
state-merkle = { path = "../../state/merkle" }
protocol-versioning = { path = "../../protocol/versioning" }
transaction-core = { path = "../transaction-core" }
hegemon-field = { workspace = true }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }

[features]
default = []
fast-proofs = ["stark-fast"]
stark-fast = ["transaction-circuit/stark-fast", "transaction-core/stark-fast"]

[lints]
workspace = true
