[package]
name = "epoch-circuit"
version = "0.1.0"
edition = "2021"
authors = ["Pauli Group Inc."]
license = "MIT"
description = "Epoch proofs for light client verification - STARK proof aggregation by epoch"
repository = "https://github.com/Pauli-Group/Hegemon"

[dependencies]
winterfell = "0.13"
winter-air = "0.13"
winter-prover = "0.13"
winter-crypto = "0.13"
winter-fri = "0.13"
winter-math = "0.13"
thiserror = "1"
log = "0.4"
blake3 = "1"

# Miden crypto for RPO algebraic hash (enables efficient in-circuit verification)
# RpoRandomCoin implements winterfell's RandomCoin trait for Fiat-Shamir
miden-crypto = { version = "0.19", default-features = false }

# Reuse Poseidon constants and helpers from transaction circuit
transaction-circuit = { path = "../transaction", features = ["rpo-fiat-shamir"] }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "recursive_proof_bench"
harness = false

[features]
default = ["std"]
std = []
stark-fast = []
unsound-recursion = []

[lints]
workspace = true
