[package]
name = "receipt-arc-whir"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
crypto = { path = "../../crypto", package = "synthetic-crypto" }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }

[lints]
workspace = true
