[package]
name = "settlement-circuit"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Contributors"]
description = "STARK circuit for settlement batch commitments."
license = "Apache-2.0"

[dependencies]
winterfell = { version = "0.13.1", default-features = false, optional = true }
winter-crypto = { version = "0.13.1", default-features = false, optional = true }
transaction-core = { path = "../transaction-core", default-features = false }
transaction-circuit = { path = "../transaction", default-features = false, optional = true }
p3-air = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }
p3-goldilocks = { workspace = true, optional = true }
p3-matrix = { workspace = true, optional = true }
p3-uni-stark = { workspace = true, optional = true }
bincode = { version = "1", optional = true }

[features]
default = ["std"]
std = ["transaction-core/std"]
winterfell-legacy = [
    "std",
    "dep:winterfell",
    "dep:winter-crypto",
    "winterfell/std",
    "winter-crypto/std",
    "transaction-core/winterfell-legacy",
]
plonky3 = [
    "std",
    "transaction-core/plonky3",
    "dep:transaction-circuit",
    "transaction-circuit/plonky3",
    "dep:p3-air",
    "dep:p3-field",
    "dep:p3-goldilocks",
    "dep:p3-matrix",
    "dep:p3-uni-stark",
    "dep:bincode",
]
stark-verify = ["winterfell-legacy"]
stark-fast = ["winterfell-legacy"]

[lints]
workspace = true
