[package]
name = "settlement-circuit"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Contributors"]
description = "STARK circuit for settlement batch commitments."
license = "Apache-2.0"

[dependencies]
transaction-core = { path = "../transaction-core", default-features = false }
transaction-circuit = { path = "../transaction", default-features = false }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
bincode = { version = "1" }

[features]
default = ["plonky3"]
std = ["transaction-core/std"]
plonky3 = ["std"]
stark-fast = []
production = []

[lints]
workspace = true
