[package]
name = "superneo-hegemon"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
blake3 = "1"
bincode = "1.3"
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
protocol-versioning = { path = "../../protocol/versioning" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
superneo-backend-lattice = { path = "../superneo-backend-lattice" }
superneo-ccs = { path = "../superneo-ccs" }
superneo-core = { path = "../superneo-core" }
superneo-ring = { path = "../superneo-ring" }
transaction-circuit = { path = "../transaction" }

[dev-dependencies]
hex = "0.4"
serde_json = "1"

[lints]
workspace = true
